<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>webots_ros2_tutorials</name>
  <version>1.0.6</version>
  <description>This package is made to aid youtube Webots_ROS2 tutorial series</description>
  <maintainer email="harsh.b.kakashaniya@gmail.com">Soft_illusion</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://www.youtube.com/c/soft-illusion</url>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>webots_ros2_core</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
